--- a/kdabet_umbrella/apps/kdabet_frontend/assets/css/app.css
+++ b/kdabet_umbrella/apps/kdabet_frontend/assets/css/app.css
@@ -6,3 +6,283 @@
 @import "tailwindcss/utilities";
 
 /* This file is for your main application CSS */
+@import url('https://fonts.googleapis.com/css2?family=Londrina+Outline&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Londrina+Outline&family=Pacifico&display=swap');
+
+html{
+  box-sizing: border-box;
+  height: 100vh;
+}
+*,
+:before,
+:after{
+  box-sizing: inherit;
+}
+body{
+  background: radial-gradient(#3a3a3a 0%, #252525 50%);
+  height: 100vh;
+}
+.title{
+   color: #fff;
+   font-family: 'Londrina Outline', sans-serif;
+   font-size: 6rem;
+   font-weight: 700;
+   text-align: center;
+   text-transform: uppercase;
+   text-shadow: 0 0 5px #ff7bac,
+  	       0 0 10px #ff7bac,
+      	       0 0 20px #ff7bac,
+ 	       0 0 40px #ff7bac,
+ 	       0 0 80px #ff7bac,
+ 	       0 0 100px #ff7bac,
+ 	       0 0 12px #ff7bac;
+   animation: blink 3s infinite linear alternate;
+}
+.title > .letter{
+   margin: 0 9px;
+}
+@keyframes blink{
+  60%, 70%, 79%{
+    opacity: 1;
+  }
+  65%, 67%, 75%, 78%{
+    opacity: 0.2;
+  }
+  66%, 69%, 77%{
+    opacity: 0.8;
+  }
+
+}
+.glowtext{
+  color: #d6d1e8;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 600; 
+  text-shadow: #a48ff2 2px 2px 10px;
+}
+.glowtext2{
+  font-weight: 400 !important; 
+  font-family: 'Pacifico', sans-serif;
+}
+.subtitle{
+  color: #d6d1e8;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 2rem;
+  font-weight: 600;
+  padding: 8px 16px;
+  text-align: center;
+  text-transform: uppercase;
+  text-shadow: #a48ff2 2px 2px 10px;
+  animation: border-flicker 6s ease-in-out 8.15s infinite alternate both;
+}
+.subtitle2{
+  color: #d6d1e8;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1.5rem;
+  font-weight: 500;
+  padding: 8px 16px;
+  text-align: center;
+  text-transform: uppercase;
+  text-shadow: #a48ff2 2px 2px 10px;
+}
+.subtitle > .letter{
+  margin: 0 5px;
+}
+.subtitle > .sep{
+  margin: 0 10px; 
+}
+.subtitle > .sl1{
+  animation: flicker 6s ease-in-out 7.75s infinite alternate both;
+}
+.subtitle > .sl2{
+  animation: flicker 6s ease-in-out 4.22s infinite alternate both;
+}
+.subtitle > .sl3{
+  animation: flicker 6s ease-in-out 56.08s infinite alternate both;
+}
+.subtitle > .sl4{
+  animation: flicker 6s ease-in-out 3.81s infinite alternate both;
+}
+.subtitle > .sl5{
+  animation: flicker 6s ease-in-out 18.32s infinite alternate both;
+}
+.subtitle > .sl6{
+  animation: flicker 6s ease-in-out 5.96s infinite alternate both;
+}
+
+.subtitle > .sl7{
+  animation: flicker 6s ease-in-out 36.81s infinite alternate both;
+}
+.subtitle > .sl8{
+  animation: flicker 6s ease-in-out 5.12s infinite alternate both;
+}
+.subtitle > .sl9{
+  animation: flicker 6s ease-in-out 17.05s infinite alternate both;
+}
+.subtitle > .sl10{
+  animation: flicker 6s ease-in-out 8.64s infinite alternate both;
+}
+.subtitle > .sl11{
+  animation: flicker 6s ease-in-out 3.89s infinite alternate both;
+}
+
+.subtitle > .sl12{
+  animation: flicker 6s ease-in-out 4.49s infinite alternate both;
+}
+.subtitle > .sl13{
+  animation: flicker 6s ease-in-out 15.91s infinite alternate both;
+}
+.subtitle > .sl14{
+  animation: flicker 6s ease-in-out 7.05s infinite alternate both;
+}
+.subtitle > .sl15{
+  animation: flicker 6s ease-in-out 3.72s infinite alternate both;
+}
+.subtitle > .sl16{
+  animation: flicker 6s ease-in-out 78.41s infinite alternate both;
+}
+
+@keyframes flicker{
+  0%, 2%, 35%, 37%, 39%, 41%, 100%{
+    opacity: 1;
+  }
+  1%, 3%, 34%, 36%, 38%, 40%{
+    opacity: 0.1;
+  }
+}
+
+@keyframes border-flicker{
+  0%, 2%,4%, 6%,33%, 37%, 39%, 41%, 100%{
+    border: 2px solid white;
+    box-shadow: #a48ff2 0px 0px 10px, inset #148ff2 2px 2px 10px;
+  }
+  1%, 3%, 5%, 34%, 36%, 38%, 40%{
+    border-color: transparent;
+    box-shadow: unset;
+  }
+}
+
+.social-icon{
+  filter: drop-shadow(0 0 50px rgba(237, 250, 255, 0.50));
+}
+
+/* Box Animation */
+.bg-bubbles {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+.bg-bubbles li {
+  position: absolute;
+  list-style: none;
+  display: block;
+  width: 40px;
+  height: 40px;
+  background-color: rgba(255, 255, 255, 0.15);
+  bottom: -160px;
+  -webkit-animation: square 25s infinite;
+  animation: square 25s infinite;
+  transition-timing-function: linear;
+}
+.bg-bubbles li:nth-child(1) {
+  left: 10%;
+}
+.bg-bubbles li:nth-child(2) {
+  left: 20%;
+  width: 80px;
+  height: 80px;
+  -webkit-animation-delay: 2s;
+          animation-delay: 2s;
+  -webkit-animation-duration: 17s;
+          animation-duration: 17s;
+}
+.bg-bubbles li:nth-child(3) {
+  left: 25%;
+  -webkit-animation-delay: 4s;
+          animation-delay: 4s;
+}
+.bg-bubbles li:nth-child(4) {
+  left: 40%;
+  width: 60px;
+  height: 60px;
+  -webkit-animation-duration: 22s;
+          animation-duration: 22s;
+  background-color: rgba(255, 255, 255, 0.25);
+}
+.bg-bubbles li:nth-child(5) {
+  left: 70%;
+}
+.bg-bubbles li:nth-child(6) {
+  left: 80%;
+  width: 120px;
+  height: 120px;
+  -webkit-animation-delay: 3s;
+          animation-delay: 3s;
+  background-color: rgba(255, 255, 255, 0.2);
+}
+.bg-bubbles li:nth-child(7) {
+  left: 32%;
+  width: 160px;
+  height: 160px;
+  -webkit-animation-delay: 7s;
+          animation-delay: 7s;
+}
+.bg-bubbles li:nth-child(8) {
+  left: 55%;
+  width: 20px;
+  height: 20px;
+  -webkit-animation-delay: 15s;
+          animation-delay: 15s;
+  -webkit-animation-duration: 40s;
+          animation-duration: 40s;
+}
+.bg-bubbles li:nth-child(9) {
+  left: 25%;
+  width: 10px;
+  height: 10px;
+  -webkit-animation-delay: 2s;
+          animation-delay: 2s;
+  -webkit-animation-duration: 40s;
+          animation-duration: 40s;
+  background-color: rgba(255, 255, 255, 0.3);
+}
+.bg-bubbles li:nth-child(10) {
+  left: 90%;
+  width: 160px;
+  height: 160px;
+  -webkit-animation-delay: 11s;
+          animation-delay: 11s;
+}
+@-webkit-keyframes square {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-900px) rotate(600deg);
+  }
+}
+@keyframes square {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-700px) rotate(600deg);
+  }
+}
+.wrapper {
+  #background: #50a3a2;
+  #background: linear-gradient(to bottom right, #50a3a2 0%, #53e3a6 100%);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  margin-top: 00px;
+  overflow: hidden;
+  z-index: -1;
+}
+.wrapper.form-success .container h1 {
+  transform: translateY(85px);
+}
