Minor clerical changes via telegram group

--- a/kdabet_umbrella/apps/kdabet_frontend/lib/kdabet_frontend_web/controllers/page_html/home.html.heex
+++ b/kdabet_umbrella/apps/kdabet_frontend/lib/kdabet_frontend_web/controllers/page_html/home.html.heex
@@ -41,10 +41,10 @@
 
     <!-- Menu -->
     <ul class="md:flex glowtext text-xl font-bold sans origin-top" x-bind:class="{ 'block absolute z-10 m-0 top-[60px] left-0 border-b border-slate-800 glasscard2 w-full': isOpen, 'hidden mr-3': !isOpen}" x-cloak>
-      <li class="px-3 cursor-pointer flex items-center hover:text-pink-200" x-bind:class="{'glasscard2 indent-5 py-3 border-b border-slate-500 hover:bg-slate-700': isOpen, '': !isOpen}">
+      <li class="px-3 cursor-pointer flex items-center hover:text-pink-200" x-bind:class="{'bg-slate-700 indent-5 py-3 border-b border-slate-500 hover:bg-slate-600': isOpen, '': !isOpen}">
         <a class="w-full" href="/about">About</a>
       </li>
-      <li class="px-3 cursor-pointer flex items-center hover:text-pink-200" x-bind:class="{'glasscard2 indent-5 py-3 border-b border-slate-500 hover:bg-slate-700': isOpen, '': !isOpen}">
+      <li class="px-3 cursor-pointer flex items-center hover:text-pink-200" x-bind:class="{'bg-slate-700 indent-5 py-3 border-b border-slate-500 hover:bg-slate-600': isOpen, '': !isOpen}">
           <a class="w-full" href="/kings">Kings</a>
       </li>
       <!--<li class="px-3 cursor-pointer flex items-center text-stone-600" x-bind:class="{'glasscard2 py-3': isOpen, '': !isOpen}">
