--- a/kdabet_umbrella/apps/kdabet_frontend/assets/css/app.scss
+++ b/kdabet_umbrella/apps/kdabet_frontend/assets/css/app.scss
@@ -40,7 +40,7 @@ body{
 .navmenu{
   @apply w-full;
   & li{
-    @apply text-lg border-b border-slate-800 cursor-pointer px-3 py-2 hover:bg-pink-100 hover:text-slate-700;
+    @apply text-lg border-b border-slate-800 cursor-pointer px-3 py-2 hover:shadow-inner hover:font-bold hover:bg-[rgba(15,118,110,0.25)] hover:text-indigo-300;
   }
 }
 .nav_mobile{
