--- a/kdabet_umbrella/apps/kdabet_frontend/assets/css/app.scss
+++ b/kdabet_umbrella/apps/kdabet_frontend/assets/css/app.scss
@@ -89,8 +89,8 @@ body{
   border-radius: 15px;
   background: rgba(255,255,255,0.1);
   overflow: hidden;
-  display: flex;
-  flex-direction: column;
+  /*display: flex;
+  flex-direction: column;*/
   border-top: 1px solid rgba(255,255,255, 0.5);
   border-left: 1px solid rgba(255,255,255, 0.5);
   backdrop-filter: blur(5px);
